--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ anyhow = "1.0.75"
 rand = "0.9.0"
 rayon="1.10.0"
 hyper = { version = "0.14", features = ["full"] }
-candle-core = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "c76be3f" }
-candle-nn = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "c76be3f" }
-candle-flash-attn = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", optional = true, rev = "c76be3f" }
+candle-core = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "ad95763" }
+candle-nn = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "ad95763" }
+#candle-flash-attn = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", optional = true, rev = "ad95763" }
 dyn-fmt = "0.4.0"
 serde = { version = "1.0.190", features = ["serde_derive"] }
 tokenizers = "0.21.2"
@@ -38,7 +38,7 @@ dirs = "5.0.1"
 minijinja = { version = "2.10.2", features = ["builtins", "json"] }
 minijinja-contrib = { version = "2.10.2", features = ["pycompat"] }
 thiserror = "1.0.58"
-attention-rs = { git = "https://github.com/guoqingbao/attention.rs", version="0.1.5", rev = "a3dc926" }
+attention-rs = { git = "https://github.com/guoqingbao/attention.rs", version="0.1.6", rev = "b92a5c5" }
 metal = { version = "0.27.0", features = ["mps"], optional = true }
 #kernels = {path = "./kernels", version="0.1.0", optional = true}
 #metal-kernels = {path = "./metal-kernels", version="0.1.0", optional = true}
@@ -63,7 +63,8 @@ accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/acceler
 cuda = ["candle-core/cuda", "candle-nn/cuda", "attention-rs/cuda"]
 metal = ["candle-core/metal", "candle-nn/metal", "dep:metal", "attention-rs/metal"]
 cudnn = ["candle-core/cudnn"]
-flash-attn = ["cuda", "dep:candle-flash-attn", "attention-rs/flash-attn"]
+flash-attn = ["cuda", "attention-rs/flash-attn"]
+flash-decoding = ["attention-rs/flash-decoding"]
 mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl"]
 nccl = ["candle-core/nccl"]
 mpi = ["candle-core/nccl", "dep:mpi"]
