--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "candle-vllm"
-version = "0.4.4"
+version = "0.4.5"
 edition = "2021"
 
 [dependencies]
@@ -53,6 +53,7 @@ itertools = "0.13.0"
 chrono = "0.4.41"
 which = "5"
 ahash = "0.8.11"
+rustchatui = { git = "https://github.com/guoqingbao/rustchatui.git", version="0.1.16" }
 
 [features]
 accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate"]
