--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,15 @@
 name = "candle-vllm"
 version = "0.4.5"
 edition = "2021"
+default-run = "candle-vllm"
+
+[lib]
+name = "candle_vllm"
+path = "src/lib.rs"
+
+[[bin]]
+name = "candle-vllm"
+path = "src/main.rs"
 
 [dependencies]
 axum = { version = "0.7.4", features = ["tokio"] }
