--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "candle-vllm"
-version = "0.4.9"
+version = "0.4.10"
 edition = "2021"
 default-run = "candle-vllm"
 
@@ -62,8 +62,12 @@ itertools = "0.13.0"
 chrono = "0.4.41"
 which = "5"
 ahash = "0.8.11"
-rustchatui = { git = "https://github.com/guoqingbao/rustchatui.git", rev="5fa0d81" }
+rustchatui = { git = "https://github.com/guoqingbao/rustchatui.git", rev="b8ea9c1" }
 base64 = "0.22.1"
+bytes = "1.5"
+reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"]}
+regex = "1.12.2"
+crossbeam = "0.8.4"
 
 [features]
 accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate"]
